--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "11.10.0",
     "npm": "6.7.0"
+  "type":"module"
   },
   "homepage": "https://arnab-datta.github.io/counter-app",
   "dependencies": {
