--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "engines": {
     "node": "11.10.0",
-    "npm": "6.7.0"
+    "npm": "6.7.0",
   "type":"module"
   },
-  "homepage": "https://arnab-datta.github.io/counter-app",
+  "homepage": "https://github.com/snehamore213/counter-app.git",
   "dependencies": {
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
